Lightdm in + ~/.local/bin in path + minor changes

--- a/compton.conf
+++ b/compton.conf
@@ -7,6 +7,6 @@ shadow-offset-x = -7;
 shadow-offset-y = -7;
 
 opacity-rule = [
-    "85:name='LXTerminal' && !focused",
+    "95:class_g *= 'Lxterminal' && !focused",
     "90:name='vim-float'"
 ];
