--- a/config/lxterminal.conf
+++ b/config/lxterminal.conf
@@ -1,5 +1,5 @@
 [general]
-fontname=Courier 10 Pitch 13
+fontname=Courier 10 Pitch Medium 14
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 bgcolor=rgb(40,40,40)
