--- a/config/lxterminal.conf
+++ b/config/lxterminal.conf
@@ -1,5 +1,5 @@
 [general]
-fontname=Roboto Mono Medium 12
+fontname=Roboto Mono 12
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 bgcolor=rgb(40,40,40)
